# memcached

./: .gitignore  .gitmodules  .luacheckrc  .travis.yml  1.lua  CHANGELOG.md  CMakeLists.txt  HACKING.md  LICENSE  README.md  memcached-scm-1.rockspec  tarantool-memcached-scm-1.rockspec  test.lua  test.sh
.github/workflows/: check.yaml  packaging.yml  publish.yml  reusable_testing.yml  testing.yaml
cmake/: BuildLibmemcached.cmake  BuildMemtier.cmake  FindCyrusSASL.cmake  FindSmall.cmake  FindTarantool.cmake  build_libmemcached.cmake  build_memtier.cmake  sasl_callback_ft.c
debian/: changelog  control  copyright  prebuild.sh
memcached/: CMakeLists.txt  init.lua  memcached.c  memcached.cc  memcached.h  memcached.lua  memcached_constants.cc  memcached_constants.h  memcached_layer.c  memcached_layer.cc  memcached_layer.h  memcached_network.c  memcached_network.cc  memcached_network.h  memcached_persistent.c
memcached/internal/: alloc.c  alloc.h  constants.c  constants.h  error.h  expiration.c  expiration.h  mc_sasl.c  mc_sasl.h  memcached.c  memcached.h  memcached_constants.c  memcached_constants.h  memcached_layer.c  memcached_layer.h  memcached_network.c  memcached_network.h  memcached_text.c  memcached_text.h  memcached_text.rl  msgpuck.c  network.c  network.h  proto_bin.c  proto_bin.h  proto_binary.c  proto_binary.h  proto_text.c  proto_text.h  proto_text_parser.c  proto_text_parser.h  proto_text_parser.rl  proto_txt.c  proto_txt.h  proto_txt_parser.c  proto_txt_parser.h  proto_txt_parser.rl  utils.c  utils.h
rockspecs/: memcached-1.0.0-1.rockspec  memcached-1.0.1-1.rockspec  memcached-scm-1.rockspec
rpm/: prebuild.sh  tarantool-memcached.spec
test/: .tarantoolctl  CMakeLists.txt
test/bench/: README.md  bench.lua  memcached.lua  memtier.test.lua  suite.ini
test/binary/: binary-boundary.result  binary-boundary.test.py  binary-expire.result  binary-expire.test.py  binary-gh-73.result  binary-gh-73.test.py  binary-toobig.result  binary-toobig.test.py  binary.lua  binary.result  binary.test.py  memcached.lua  suite.ini
test/capable/: capable-binary.result  capable-binary.test.py  capable-text.result  capable-text.skipcond  capable-text.test.py  capable.lua  internal  suite.ini
test/common/: defaults.test.lua  instance_api.test.lua  module_api.test.lua  suite.ini
test/custom/: custom.lua  suite.ini
test/internal/: compat.py  memcached_connection.py
test/sasl/: binary-sasl.result  binary-sasl.test.py  internal  pymemcache.result  pymemcache.skipcond  pymemcache.test.py  sasl.db  sasl.lua  suite.ini
test/sasl/config/: tarantool-memcached.conf
test/text/: binary-get.result  binary-get.test.py  bogus-commands.result  bogus-commands.test.py  cas.result  cas.test.py  expirations.result  expirations.test.py  flags.result  flags.test.py  flush-all.result  flush-all.test.py  getset.result  getset.test.py  incrdecr.result  incrdecr.test.py  multiversioning.result  multiversioning.test.py  noreply.result  noreply.test.py  suite.ini  text.lua
test/text/lua/memcached/: expirationd.lua  memcached.lua
test/var/: memcached
travis/: install-tarantool.sh
